PROD-9-26-19/force-app/main/default/objects/Account/fields/Multiple_Platform_Investor__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Platform_Investor__c</fullName>
    <description>Multiple platform counts based each platform roll up fields (hidden from layout)</description>
    <formula>IF( Platform_count_Property__c&gt;0,1,0)+ If(Platform_count_Infrastructure__c&gt;0,1,0)+ If( Platform_count_PE__c &gt;0,1,0)+ If( Platform_count_Agriculture__c  &gt;0,1,0)+ If(  Platform_count_Credit__c &gt;0,1,0)+ If( Platform_count_Timberland__c  &gt;0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Multiple platform counts based each platform roll up fields (hidden from layout)</inlineHelpText>
    <label>Multiple Platform Investor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>