PROD-9-26-19/force-app/main/default/objects/Account/fields/No_of_BOX_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>No_of_BOX_Shareholder__c</fullName>
    <label>No of BOX Shareholder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>