PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>PFG_Account_Relationship__c</fullName>
    <description>Relationship between Brookfield and the Account, includes Consultant, Investor, Prospect, and Former Client.</description>
    <formula>IF ( PFG_Total_Raised_Capital__c &gt; 0 , &quot;Investor&quot;, 
    IF ( AND( ISBLANK(PFG_Total_Raised_Capital__c), NOT(ISPICKVAL(Investor_Type__c , &quot;Consultant&quot;))), &quot;Prospect&quot;, 
       IF (  AND(ISBLANK(PFG_Total_Raised_Capital__c),  ISPICKVAL(Investor_Type__c , &quot;Consultant&quot;)), &quot;Consultant&quot;, 
         IF ( AND(PFG_Total_Raised_Capital__c = 0), &quot;Former Client&quot;, 
         &quot;&quot; 
         ) 
       ) 
   ) 
)</formula>
    <inlineHelpText>Relationship between Brookfield and the Account, includes Consultant, Investor, Prospect, and Former Client.</inlineHelpText>
    <label>PFG Account Relationship</label>
    <type>Text</type>
</CustomField>