PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_CRM_Secondary_Lead__c.field-meta.xml
<CustomField>
    <fullName>PFG_CRM_Secondary_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary Lead or in the case of split coverage, this would indicate Private Equity/Credit coverage.</description>
    <inlineHelpText>Secondary Lead or in the case of split coverage, this would indicate Private Equity/Credit coverage.</inlineHelpText>
    <label>Secondary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>