PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Date_of_first_Commitment__c.field-meta.xml
<CustomField>
    <fullName>PFG_Date_of_first_Commitment__c</fullName>
    <description>Close date of the First PFG Investment</description>
    <label>PFG Date of First Commitment</label>
    <type>Date</type>
</CustomField>