PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Equity_Invested_After_Sub__c.field-meta.xml
<CustomField>
    <fullName>PFG_Equity_Invested_After_Sub__c</fullName>
    <label>PFG Equity Invested - After Sub</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>