PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PFG_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>PFG External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>