PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_General_Investing_Interest__c.field-meta.xml
<CustomField>
    <fullName>PFG_General_Investing_Interest__c</fullName>
    <inlineHelpText>Select the Asset Classes the firm is interested in investing.  Will help prioritize and build prospect lists.</inlineHelpText>
    <label>Investing Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-Investments</fullName>
            </value>
            <value>
                <fullName>Credit / Hedge  Funds</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Real Estate - Core</fullName>
            </value>
            <value>
                <fullName>Real Estate - Non-Core</fullName>
            </value>
            <value>
                <fullName>Timb/Ag/Power</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>