PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Number_of_Meetings__c.field-meta.xml
<CustomField>
    <fullName>PFG_Number_of_Meetings__c</fullName>
    <description>roll up of PFG Meetings of all time - sum of the number of Meetings on a PFG Opportunity</description>
    <inlineHelpText>roll up of PFG Meetings of all time - sum of the number of Meetings on a PFG Opportunity</inlineHelpText>
    <label>PFG Number of Meetings</label>
    <summarizedField>Opportunity.PFG_Number_of_Meetings__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.PFG_Number_of_Meetings__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>