PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Number_of_Original_Commitments__c.field-meta.xml
<CustomField>
    <fullName>PFG_Number_of_Original_Commitments__c</fullName>
    <label>PFG Number of Original Commitments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>