PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_of_Calls_Emails_YTD__c.field-meta.xml
<CustomField>
    <fullName>PFG_of_Calls_Emails_YTD__c</fullName>
    <description>roll up to count the number of PFG tasks if the YTD box is ticked</description>
    <inlineHelpText>roll up to count the number of PFG tasks if the YTD box is ticked</inlineHelpText>
    <label>PFG # of Calls/ Emails YTD</label>
    <summarizedField>Opportunity.PFG_Number_of_Calls_Emails_YTD__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Last_Activity_Date__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>