PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Priority_Account__c.field-meta.xml
<CustomField>
    <fullName>PFG_Priority_Account__c</fullName>
    <label>PFG Priority Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>