PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_RE_Product_Specialist__c.field-meta.xml
<CustomField>
    <fullName>PFG_RE_Product_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify the product specialist covering the account</description>
    <inlineHelpText>To identify the product specialist covering the account</inlineHelpText>
    <label>PFG RE Product Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Search is defaulted to display active users.  You can search all if you need to see an inactive user.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsUser7</relationshipName>
    <type>Lookup</type>
</CustomField>