PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Total_NAV__c.field-meta.xml
<CustomField>
    <fullName>PFG_Total_NAV__c</fullName>
    <label>PFG Total NAV</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>