PROD-9-26-19/force-app/main/default/objects/Account/fields/PFG_Total_Raised_Capital__c.field-meta.xml
<CustomField>
    <fullName>PFG_Total_Raised_Capital__c</fullName>
    <description>Provide an aggregated amount for all Brookfield private funds the Account is invested in</description>
    <inlineHelpText>Provide an aggregated amount for all Brookfield private funds the Account is invested in</inlineHelpText>
    <label>Private Funds Total Committed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>