PROD-9-26-19/force-app/main/default/objects/Account/fields/Platform_count_Agriculture__c.field-meta.xml
<CustomField>
    <fullName>Platform_count_Agriculture__c</fullName>
    <label>Platform count - Agriculture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>