PROD-9-26-19/force-app/main/default/objects/Account/fields/Pre_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualified__c</fullName>
    <label>Pre-Qualified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>