PROD-9-26-19/force-app/main/default/objects/Account/fields/Preqin_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Preqin_Firm_ID__c</fullName>
    <label>Preqin Firm ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>