PROD-9-26-19/force-app/main/default/objects/Account/fields/PSG_Alts_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>PSG_Alts_Account_Type__c</fullName>
    <label>PSG Alts Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>