PROD-9-26-19/force-app/main/default/objects/Account/fields/RCF_Lending__c.field-meta.xml
<CustomField>
    <fullName>RCF_Lending__c</fullName>
    <label>RCF Lending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>