PROD-9-26-19/force-app/main/default/objects/Account/fields/Relationship_Importance__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Importance__c</fullName>
    <description>Account Level Relationship Importance</description>
    <inlineHelpText>Account Level Relationship Importance</inlineHelpText>
    <label>Relationship Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High (1)</fullName>
            </value>
            <value>
                <fullName>Medium (2)</fullName>
            </value>
            <value>
                <fullName>Low (3)</fullName>
            </value>
            <value>
                <fullName>Research Required</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Not Interested in Private Funds</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <isActive>false</isActive>
                <label>Neutral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>