PROD-9-26-19/force-app/main/default/objects/Account/fields/Relationship_Tier__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Tier__c</fullName>
    <label>Relationship Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Core Lender</fullName>
            </value>
            <value>
                <fullName>2 - Regional Lender</fullName>
            </value>
            <value>
                <fullName>3 - Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>