PROD-9-26-19/force-app/main/default/objects/Account/fields/Retail_Investor__c.field-meta.xml
<CustomField>
    <fullName>Retail_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Investor</label>
    <type>Checkbox</type>
</CustomField>