PROD-9-26-19/force-app/main/default/objects/Account/fields/RIA__c.field-meta.xml
<CustomField>
    <fullName>RIA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter the accounts for reporting purposes</description>
    <label>RIA</label>
    <type>Checkbox</type>
</CustomField>