PROD-9-26-19/force-app/main/default/objects/Account/fields/SmartvCard__Email__c.field-meta.xml
<CustomField>
    <fullName>SmartvCard__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>