PROD-9-26-19/force-app/main/default/objects/Account/fields/SMP_Secondary__c.field-meta.xml
<CustomField>
    <fullName>SMP_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMP Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>