PROD-9-26-19/force-app/main/default/objects/Account/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <description>Strategies the Account is interested in Co-investing with</description>
    <inlineHelpText>Strategies the Account is interested in Co-investing with</inlineHelpText>
    <label>Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Core-Plus</fullName>
            </value>
            <value>
                <fullName>Value-Add</fullName>
            </value>
            <value>
                <fullName>Opportunistic</fullName>
            </value>
            <value>
                <fullName>Distressed</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>