PROD-9-26-19/force-app/main/default/objects/Account/fields/Sub_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate if the client is sub-advised by PSG</description>
    <inlineHelpText>To indicate if the client is sub-advised by PSG</inlineHelpText>
    <label>Sub-Advisor</label>
    <type>Checkbox</type>
</CustomField>