PROD-9-26-19/force-app/main/default/objects/Account/fields/Transaction_Fees_Inception__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fees_Inception__c</fullName>
    <label>Transaction Fees - Inception</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>