PROD-9-26-19/force-app/main/default/objects/Account/fields/Under_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Under_Consideration__c</fullName>
    <description>Roll up for current funds that are under consideration</description>
    <inlineHelpText>Roll up for current funds that are under consideration</inlineHelpText>
    <label>Funds Under Consideration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>