PROD-9-26-19/force-app/main/default/objects/Account/fields/Useful_Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Useful_Customer_Information__c</fullName>
    <inlineHelpText>Secure field only visible to BEMI</inlineHelpText>
    <label>Useful Customer Information</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>