PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/Alts.recordType-meta.xml
<RecordType>
    <fullName>Alts</fullName>
    <active>true</active>
    <label>Alts</label>
</RecordType>