PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/Brookfield.recordType-meta.xml
<RecordType>
    <fullName>Brookfield</fullName>
    <active>true</active>
    <label>Brookfield</label>
</RecordType>