PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/BRP.recordType-meta.xml
<RecordType>
    <fullName>BRP</fullName>
    <active>true</active>
    <label>BRP</label>
</RecordType>