PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/Consultant.recordType-meta.xml
<RecordType>
    <fullName>Consultant</fullName>
    <active>true</active>
    <label>Consultant</label>
</RecordType>