PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/Finance.recordType-meta.xml
<RecordType>
    <fullName>Finance</fullName>
    <active>true</active>
    <label>Finance</label>
</RecordType>