PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/NonInvestor.recordType-meta.xml
<RecordType>
    <fullName>NonInvestor</fullName>
    <active>true</active>
    <label>NonInvestor</label>
</RecordType>