PROD-9-26-19/force-app/main/default/objects/Account/recordTypes/Parent_Company.recordType-meta.xml
<RecordType>
    <fullName>Parent_Company</fullName>
    <active>true</active>
    <label>Parent Company</label>
</RecordType>