PROD-9-26-19/force-app/main/default/objects/Account/listViews/Account_Coverage_Changes.listView-meta.xml
<ListView>
    <fullName>Account_Coverage_Changes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PFG_CRM_Secondary__c</columns>
    <columns>Real_Estate__c</columns>
    <columns>PFG_CRM_Real_Asset_Lead__c</columns>
    <columns>PFG_CRM_Primary_Lead__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Investor_Type__c</columns>
    <columns>Account_Status__c</columns>
    <columns>PFG_Relationship_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Investor</value>
    </filters>
    <label>Account Coverage Changes</label>
    <sharedTo>
        <group>PFG_Support_Group</group>
    </sharedTo>
</ListView>