PROD-9-26-19/force-app/main/default/objects/Account/listViews/BAC_Accounts.listView-meta.xml
<ListView>
    <fullName>BAC_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Ranking__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BAC_Owner__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>PSG_Alts_Accounts__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>BAC Accounts</label>
    <sharedTo>
        <roleAndSubordinates>BAC</roleAndSubordinates>
    </sharedTo>
</ListView>