PROD-9-26-19/force-app/main/default/objects/Account/listViews/BCP_Investors.listView-meta.xml
<ListView>
    <fullName>BCP_Investors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>US_Canada_Europe_UK_Region__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Private_Funds_Invested_in__c</columns>
    <columns>BIM_Funds_Invested_In__c</columns>
    <columns>SMP_Primary__c</columns>
    <columns>BAM_Relationship_Notes__c</columns>
    <columns>BIM_Relationship_notes__c</columns>
    <columns>BCP_Relationship_Notes__c</columns>
    <columns>BIF_Relationship_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_count_PE__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PSG_Alts_Accounts__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>BCP Investors</label>
    <sharedTo>
        <roleAndSubordinates>PFG</roleAndSubordinates>
        <roleAndSubordinates>PFG_APAC</roleAndSubordinates>
        <roleAndSubordinates>PFG_APAC_CRM</roleAndSubordinates>
        <roleAndSubordinates>PFG_APAC_Support</roleAndSubordinates>
        <roleAndSubordinates>PFG_CRM</roleAndSubordinates>
        <roleAndSubordinates>PFG_CanAm</roleAndSubordinates>
        <roleAndSubordinates>PFG_CanAm_CRM</roleAndSubordinates>
        <roleAndSubordinates>PFG_CanAm_Support</roleAndSubordinates>
        <roleAndSubordinates>PFG_EMEA</roleAndSubordinates>
        <roleAndSubordinates>PFG_EMEA_CRM</roleAndSubordinates>
        <roleAndSubordinates>PFG_EMEA_Support</roleAndSubordinates>
        <roleAndSubordinates>PFG_Exec</roleAndSubordinates>
        <roleAndSubordinates>PFG_Platforms</roleAndSubordinates>
        <roleAndSubordinates>PFG_Salesforce_Support</roleAndSubordinates>
        <roleAndSubordinates>PFG_Salesforce_Support_Team</roleAndSubordinates>
        <roleAndSubordinates>PFG_Team</roleAndSubordinates>
    </sharedTo>
</ListView>