PROD-9-26-19/force-app/main/default/objects/Account/listViews/BRP_Accounts.listView-meta.xml
<ListView>
    <fullName>BRP_Accounts</fullName>
    <booleanFilter>(1 OR 2 ) AND 3 AND 4</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>BRP_Account_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Platform__c</columns>
    <columns>BRP_Locations_of_Interest__c</columns>
    <columns>BRP_Priority__c</columns>
    <columns>BRP_Relationship_Notes__c</columns>
    <columns>BRP_Relationship_Owner__c</columns>
    <columns>BRP_North_America_NDA__c</columns>
    <columns>BRP_North_America_NDA_End__c</columns>
    <columns>BRP_North_America_NDA_start__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BRP_Relationship_Owner__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>BRP_Account_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>PSG_Alts_Accounts__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>BRP Accounts</label>
    <sharedTo>
        <group>BRP</group>
        <group>BRP_EU</group>
        <group>BRP_NA</group>
        <group>Sys_Admin_Support</group>
    </sharedTo>
</ListView>