PROD-9-26-19/force-app/main/default/objects/Account/listViews/BRP_USA_Accounts.listView-meta.xml
<ListView>
    <fullName>BRP_USA_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>BRP_Region__c</columns>
    <columns>BRP_Account_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.BRP</value>
    </filters>
    <filters>
        <field>BRP_Region__c</field>
        <operation>equals</operation>
        <value>BRP_USA</value>
    </filters>
    <label>BRP USA  All Accounts</label>
    <sharedTo>
        <role>BRP_Business_Development</role>
    </sharedTo>
</ListView>