PROD-9-26-19/force-app/main/default/objects/Account/listViews/Current_Shareholders.listView-meta.xml
<ListView>
    <fullName>Current_Shareholders</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>PFG_Relationship_Type__c</columns>
    <columns>BIM_Relationship_Type_del__c</columns>
    <columns>PFG_CRM_Primary_Lead__c</columns>
    <columns>BIM_Primary_Mktg_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BAM_Shareholder_Status__c</field>
        <operation>equals</operation>
        <value>Current Shareholder</value>
    </filters>
    <filters>
        <field>PSG_Alts_Accounts__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>BAM Current Shareholders</label>
    <sharedTo>
        <role>BAM</role>
        <role>PFG</role>
        <role>PFG_CRM</role>
        <role>PFG_Exec</role>
        <role>SMP</role>
    </sharedTo>
</ListView>